# dialectic

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/skills/dialectic/: SKILL.md
.dialectic/: .gitignore
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
dialectic/: __init__.py  cli.py  core.py  protocol.py  server.py  worktree.py
dialectic/agents/: __init__.py  claude.py  codex.py
docs/: architecture.md
examples/: 01_basic_run.sh  02_inspect_audit_log.py  03_http_api_client.py  README.md
tests/: conftest.py  test_cli.py  test_cli_costs.py  test_cli_list_runs.py  test_cli_show.py  test_concurrency.py  test_e2e_real_cli.py  test_orchestrator.py  test_prompt_builders.py  test_protocol.py  test_server.py  test_strict_schema.py  test_worktree.py
