[project]
name = "dialectic"
version = "0.1.0"
description = "Cross-family writer-reviewer protocol for LLM code generation. Claude writes, Codex reviews, you arbitrate."
requires-python = ">=3.11"
authors = [{ name = "Luke Marinos" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "pydantic>=2.5",
    "click>=8.1",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
dialectic = "dialectic.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dialectic"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
